# MAFBM

./: .gitignore  .pre-commit-config.yaml  frechet_distance.py  measure_runtime.py  measure_runtime_detail.py  pyproject.toml  visualize_model.py
sde/data/: ball.py  bar.py  moving_mnist.py  util.py
sde/jax/: markov_approximation.py  models.py  train.py
