[project]
name = "sde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.16"
dependencies = [
    "diffrax>=0.6.2",
    "distrax>=0.1.5",
    "flax>=0.10.3",
    "imageio>=2.37.0",
    "jax[cuda12]>=0.5.0",
    "jsonargparse>=4.37.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "moviepy~=1.0.3",
    "numpy<2.0.0",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "stochastic>=0.4.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.7",
    "stochastic @ git+https://github.com/crflynn/stochastic.git",
    'flm @ git+ssh://git@github.com/bencoscia/flm.git',
    "srvp-fd>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sde"]


[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
